--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"recoil": "^0.1.2",
 		"redux": "^4.0.5",
 		"typescript": "^4.0.3",
+		"uuid": "^8.3.2",
 		"web-vitals": "^0.2.4"
 	},
 	"scripts": {
@@ -49,6 +50,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/uuid": "^8.3.0",
 		"husky": "^4.3.6",
 		"pinst": "^2.1.1",
 		"prettier": "^2.2.1",
