--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@types/react": "^16.9.53",
 		"@types/react-dom": "^16.9.8",
 		"antd": "^4.9.4",
+		"classnames": "^2.2.6",
 		"hox": "^1.1.2",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
@@ -50,6 +51,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/classnames": "^2.2.11",
 		"@types/uuid": "^8.3.0",
 		"husky": "^4.3.6",
 		"pinst": "^2.1.1",
