--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-redux": "^7.2.2",
+		"react-router": "^5.2.0",
+		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.1",
 		"recoil": "^0.1.2",
 		"redux": "^4.0.5",
@@ -52,6 +54,7 @@
 	},
 	"devDependencies": {
 		"@types/classnames": "^2.2.11",
+		"@types/react-router-dom": "^5.1.7",
 		"@types/uuid": "^8.3.0",
 		"husky": "^4.3.6",
 		"pinst": "^2.1.1",
