--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"antd": "^4.9.4",
 		"classnames": "^2.2.6",
 		"hox": "^1.1.2",
+		"immutable": "^4.0.0-rc.12",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-redux": "^7.2.2",
