--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"classnames": "^2.2.6",
 		"hox": "^1.1.2",
 		"immutable": "^4.0.0-rc.12",
+		"memoize-one": "^5.1.1",
+		"memoizee": "^0.4.15",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-redux": "^7.2.2",
@@ -56,6 +58,7 @@
 	},
 	"devDependencies": {
 		"@types/classnames": "^2.2.11",
+		"@types/memoizee": "^0.4.5",
 		"@types/react-router-dom": "^5.1.7",
 		"@types/uuid": "^8.3.0",
 		"husky": "^4.3.6",
