--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
 		"web-vitals": "^0.2.4"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
+		"start": "react-app-rewired start",
+		"build": "react-app-rewired build",
+		"test": "react-app-rewired test",
+		"eject": "react-app-rewired eject",
 		"postinstall": "npx husky install",
 		"prepublishOnly": "pinst --disable",
 		"postpublish": "pinst --enable"
@@ -61,9 +61,11 @@
 		"@types/memoizee": "^0.4.5",
 		"@types/react-router-dom": "^5.1.7",
 		"@types/uuid": "^8.3.0",
+		"customize-cra": "^1.0.0",
 		"husky": "^4.3.6",
 		"pinst": "^2.1.1",
 		"prettier": "^2.2.1",
-		"pretty-quick": "^3.1.0"
+		"pretty-quick": "^3.1.0",
+		"react-app-rewired": "^2.1.8"
 	}
 }
