--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@types/node": "^12.0.0",
 		"@types/react": "^16.9.53",
 		"@types/react-dom": "^16.9.8",
+		"@types/recoil": "^0.0.1",
 		"antd": "^4.9.4",
 		"classnames": "^2.2.6",
 		"hox": "^1.1.2",
