--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"memoize-one": "^5.1.1",
 		"memoizee": "^0.4.15",
 		"react": "^17.0.1",
+		"react-dnd": "^11.1.3",
+		"react-dnd-html5-backend": "^11.1.3",
 		"react-dom": "^17.0.1",
 		"react-redux": "^7.2.2",
 		"react-router": "^5.2.0",
