--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
 		"@testing-library/user-event": "^12.1.10",
 		"@types/jest": "^26.0.15",
 		"@types/node": "^12.0.0",
-		"@types/react": "^16.9.53",
 		"@types/react-dom": "^16.9.8",
 		"@types/recoil": "^0.0.1",
 		"antd": "^4.9.4",
@@ -19,8 +18,6 @@
 		"memoize-one": "^5.1.1",
 		"memoizee": "^0.4.15",
 		"react": "^17.0.1",
-		"react-dnd": "^11.1.3",
-		"react-dnd-html5-backend": "^11.1.3",
 		"react-dom": "^17.0.1",
 		"react-redux": "^7.2.2",
 		"react-router": "^5.2.0",
@@ -62,6 +59,8 @@
 	"devDependencies": {
 		"@types/classnames": "^2.2.11",
 		"@types/memoizee": "^0.4.5",
+		"@types/react": "^16.14.2",
+		"@types/react-color": "^3.0.4",
 		"@types/react-router-dom": "^5.1.7",
 		"@types/uuid": "^8.3.0",
 		"customize-cra": "^1.0.0",
