--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"immutable": "^4.0.0-rc.12",
 		"memoize-one": "^5.1.1",
 		"memoizee": "^0.4.15",
+		"query-string": "^6.13.8",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-redux": "^7.2.2",
